--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 
         <a class="open-image-section-block w-hidden-small w-hidden-tiny w-inline-block" data-ix="hide-arrow-button" href="#">
-            <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="imgj/flechade.png">
+            <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="img/flechade.png">
         </a>
         <div class="left-section">
             <div class="close-button-wrapper w-hidden-small w-hidden-tiny">
