--- a/marruecosisuenergiasolar.html
+++ b/marruecosisuenergiasolar.html
@@ -78,7 +78,7 @@
                 </div>
 
         <a class="open-image-section-block w-hidden-small w-hidden-tiny w-inline-block" data-ix="hide-arrow-button" href="#">
-            <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="https://image.freepik.com/foto-gratis/instalacion-fotovoltaica-paneles-solares-techo-fabrica_39420-148.jpg">
+            <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="img/flechade.png">
         </a>
             <div class="blog-post-header left-section" style="background-image: url('https://image.freepik.com/foto-gratis/render-3d-robot-que-sostiene-panel-solar-glboe-cubierta-hierba_1048-10930.jpg');">
                 <div class="close-button-wrapper w-hidden-small w-hidden-tiny">
