--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     </div>
                     <div class="nav-about-content-block">
                         <div class="nav-about-me-title">James Vásquez</div>
-                        <img class="nav-location-icon" src="imgj/posision.png">
+                        <img class="nav-location-icon" src="img/posision.png">
                         <div class="nav-location-title">Perú</div>
-                        <p class="menu-profile-paragraph">Bienvenido encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
+                        <p class="menu-profile-paragraph">Encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="james.html">Inicio</a>
@@ -94,7 +94,7 @@
                 <div class="centered left-section-content-wrapper">
                     <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://schooltec.net/img/james.png">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Hola</h1>
-                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Bienvenido encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
+                    <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
                         <a class="color left-section-social-button w-button" target="_blak" href="https://www.facebook.com/jamesvasquezg">Facebook</a>
                         <a class="color left-section-social-button twitter w-button" target="_blak" href="https://twitter.com/jamesvasquezg">Twitter</a>
