--- a/marruecosisuenergiasolar.html
+++ b/marruecosisuenergiasolar.html
@@ -64,7 +64,7 @@
                         <div class="nav-about-me-title">James Vásquez</div>
                         <img class="nav-location-icon" src="img/posision.png">
                         <div class="nav-location-title">Perú</div>
-                        <p class="menu-profile-paragraph">Bienvenido encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
+                        <p class="menu-profile-paragraph">Encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="index.html">Inicio</a>
