--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         <!--Javascript, fuentes y CSS Estilos-->
         <link href="css/stylos.css" rel="stylesheet" type="text/css">
-        <link href="https://schooltec.net/img/james.png" rel="shortcut icon" type="image/x-icon">
-        <link href="https://schooltec.net/img/james.png" rel="apple-touch-icon">
+        <link href="https://jamesvasquezg.github.io/pe/img/james.png" rel="shortcut icon" type="image/x-icon">
+        <link href="https://jamesvasquezg.github.io/pe/img/james.png" rel="apple-touch-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
         <script type="text/javascript">WebFont.load({
             google: {
@@ -57,7 +57,7 @@
             <nav class="nav-menu w-nav-menu" role="navigation">
                 <div class="nav-about-me-block">
                     <div class="nav-image-header">
-                        <img class="nav-profile-image" sizes="100vw" src="https://schooltec.net/img/james.png">
+                        <img class="nav-profile-image" sizes="100vw" src="https://jamesvasquezg.github.io/pe/img/james.png">
                     </div>
                     <div class="nav-about-content-block">
                         <div class="nav-about-me-title">James Vásquez</div>
@@ -92,7 +92,7 @@
             </div>
             <div class="left-section-overlay">
                 <div class="centered left-section-content-wrapper">
-                    <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://schooltec.net/img/james.png">
+                    <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/james.png">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Hola</h1>
                     <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
@@ -117,7 +117,7 @@
                                             <div class="blog-card-title">Marruecos y su energía solar</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://schooltec.net/img/james.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/james.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Set 20, 2019</div>
                                         </div>
@@ -133,7 +133,7 @@
                                             <div class="blog-card-title">Drones y la agricultura del futuro.</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://schooltec.net/img/james.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/james.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Set 13, 2019</div>
                                         </div>
@@ -149,7 +149,7 @@
                                             <div class="blog-card-title">Bioluminiscencia árboles que producen luz</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://schooltec.net/img/james.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/james.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Set 06, 2019</div>
                                         </div>
@@ -165,7 +165,7 @@
                                             <div class="blog-card-title">¿Están nuestros archivos seguros en la nube?</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://schooltec.net/img/james.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/james.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Ags 30, 2019</div>
                                         </div>
