--- a/marruecosisuenergiasolar.html
+++ b/marruecosisuenergiasolar.html
@@ -35,8 +35,8 @@
         
         <!--Javascript, fuentes y CSS Estilos-->
         <link href="css/stylos.css" rel="stylesheet" type="text/css">
-        <link href="https://schooltec.net/img/james.png" rel="shortcut icon" type="image/x-icon">
-        <link href="https://schooltec.net/img/james.png" rel="apple-touch-icon">
+        <link href="https://jamesvasquezg.github.io/pe/img/james.png" rel="shortcut icon" type="image/x-icon">
+        <link href="https://jamesvasquezg.github.io/pe/img/james.png" rel="apple-touch-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
         <script type="text/javascript">WebFont.load({
             google: {
@@ -58,7 +58,7 @@
             <nav class="nav-menu w-nav-menu" role="navigation">
                 <div class="nav-about-me-block">
                     <div class="nav-image-header">
-                        <img class="nav-profile-image" sizes="100vw" src="https://schooltec.net/img/james.png">
+                        <img class="nav-profile-image" sizes="100vw" src="https://jamesvasquezg.github.io/pe/img/james.png">
                     </div>
                     <div class="nav-about-content-block">
                         <div class="nav-about-me-title">James Vásquez</div>
@@ -94,7 +94,7 @@
                     <div class="align-left left-section-content-wrapper">
                         <h2 class="blog-post-header-title w-hidden-small w-hidden-tiny" data-ix="fade-in-on-load-2">Marruecos y su energía solar</h2>
                         <div class="blog-post-page-author-wrapper w-clearfix" data-ix="fade-in-on-load-2">
-                            <div class="blog-post-author-block" style="background-image: url('https://schooltec.net/img/james.png');"></div>
+                            <div class="blog-post-author-block" style="background-image: url('https://jamesvasquezg.github.io/pe/img/james.png');"></div>
                             <div class="blog-post-page-author-title">James Vásquez</div>
                             <div class="large-blog-post-date">Agos 16, 2019</div>
                         </div>
