--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="es">
     <head>
 
-        <title>James Gómez</title>
+        <title>James Vásquez</title>
 
         <!--Ceo y posicionamiento web-->
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-        <meta name="author" content="James Gómez"/>
-        <meta name="title" content="James Gómez" >
+        <meta name="author" content="James Vásquez"/>
+        <meta name="title" content="James Vásquez" >
         <meta name="description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
         <meta name="disribution" content="global"/>
-        <meta name="copyright" content="Copyright 2019 by James Gómez " />
+        <meta name="copyright" content="Copyright 2019 by James Vásquez " />
         <meta name="theme-color" content="#005371"/>
         <!--###########################-->
 
         <!--Targetas de Twitter-->
-        <meta name="twitter:title" content="James Gómez"/>
+        <meta name="twitter:title" content="James Vásquez"/>
         <meta name="twitter:description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
         <meta name="twitter:card" content="photo"/>
         <meta name="twitter:site" content="@jamesvasquezg"/>
@@ -26,10 +26,10 @@
         <!--###################-->
     
         <!-- Open Graph data Facebook -->
-        <meta property="og:title" content="James Gómez"/>
+        <meta property="og:title" content="James Vásquez"/>
         <meta property="og:description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
         <meta property="og:type" content="Article" />
-        <meta property="og:site_name" content="James Gómez"/>
+        <meta property="og:site_name" content="James Vásquez"/>
         <meta property="og:url" content="https://jamesvasquezg.github.io/pe" />
         <meta property="og:image" content="https://jamesvasquezg.github.io/pe/img/portadaweb.png"/>
 
@@ -72,10 +72,9 @@
                         <img class="nav-profile-image" sizes="100vw" src="https://jamesvasquezg.github.io/pe/img/isotipo.png">
                     </div>
                     <div class="nav-about-content-block">
-                        <div class="nav-about-me-title">James Gómez</div>
+                        <div class="nav-about-me-title">James Vásquez</div>
                         <img class="nav-location-icon" src="img/posision.png">
                         <div class="nav-location-title">Perú</div>
-                        <p class="menu-profile-paragraph">Encuentra los mejores post sobre ingeniería, computación y tecnología.</p>
                     </div>
                 </div>
                 <a class="nav-link w-nav-link" href="james.html">Inicio</a>
@@ -194,7 +193,7 @@
                 <div class="main-content-wrapper">
                     <center>
                         <p class="footer-paragraph">
-                            <strong data-new-link="true">© James Gómez - 2019</strong>
+                            <strong data-new-link="true">© James Vásquez - 2020</strong>
                         </p>
                     </center>
                 </div>
