--- a/archivosenlanuve.html
+++ b/archivosenlanuve.html
@@ -82,7 +82,7 @@
         <a class="open-image-section-block w-hidden-small w-hidden-tiny w-inline-block" data-ix="hide-arrow-button" href="#">
             <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="img/flechade.png">
         </a>
-            <div class="blog-post-header left-section" style="background-image: url('https://instagram.ftru2-2.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/p640x640/72198997_913500765713691_4599598368756918050_n.jpg?_nc_ht=instagram.ftru2-2.fna.fbcdn.net&_nc_cat=103&_nc_ohc=tTbQaM9dVY8AX_u3OLX&oh=883c7ba71f6ba8b0f11c6e73852b335c&oe=5E9005C6');">
+            <div class="blog-post-header left-section" style="background-image: url('https://images.pexels.com/photos/4806731/pexels-photo-4806731.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
                 <div class="close-button-wrapper w-hidden-small w-hidden-tiny">
                     <a class="left-section-close-button w-inline-block" data-ix="close-left-section" href="#">
                         <div class="close-block-title" data-ix="hide-close-title">Modo lectura</div>
@@ -109,11 +109,13 @@
 
                         <div class="rich-text-block w-richtext">
                             <div style="padding:56.25% 0 0 0;position:relative;"> 
-                                <iframe  style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen  src="https://cdn.jwplayer.com/players/5biCdHM0-3rOwtw94.html" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                                <iframe  style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen  src="https://www.youtube.com/embed/tG70kdYMeg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                             </div>
                         </div>
                         
                         <blockquote><a target="_blak" href="https://www.vodafone.es/">Fuente</a></blockquote>
+
+                        <div class="texto">Hasta la llegada de Internet, estar en las nubes según la RAE era “ser despistado, soñador, no apercibirse de la realidad”. Pero ahora todos estamos en la nube. Incluso los que no son conscientes de ello. En la nube están las fotos de nuestras vacaciones, los documentos de trabajo, los “me gusta” del Facebook y el último restaurante que hemos visitado. Todo muy sencillo, accesible y… expuesto ante miradas indiscretas. Por eso la seguridad informática y la protección de la privacidad, se han convertido en las mayores preocupaciones para las empresas tecnológicas.</div>
 
                         <div class="read-more-posts-title-wrapper">
                             <h4 class="more-posts-title">¿Ya viste esto?</h4>
