--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="title" content="James Vásquez" >
         <meta name="description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
         <meta name="disribution" content="global"/>
-        <meta name="copyright" content="Copyright 2019 by James Vásquez " />
+        <meta name="copyright" content="Copyright 2021 by James Vásquez " />
         <meta name="theme-color" content="#005371"/>
         <!--###########################-->
 
@@ -69,7 +69,7 @@
             <nav class="nav-menu w-nav-menu" role="navigation">
                 <div class="nav-about-me-block">
                     <div class="nav-image-header">
-                        <img class="nav-profile-image" sizes="100vw" src="https://jamesvasquezg.github.io/pe/img/isotipo.png">
+                        <img class="nav-profile-image" sizes="100vw" src="https://avatars.githubusercontent.com/u/48609645?s=400&u=e9254a7739e60ffc028a5b18bb2262b078eb658a&v=4">
                     </div>
                     <div class="nav-about-content-block">
                         <div class="nav-about-me-title">James Vásquez</div>
@@ -101,7 +101,7 @@
             </div>
             <div class="left-section-overlay">
                 <div class="centered left-section-content-wrapper">
-                    <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/isotipo.png">
+                    <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://avatars.githubusercontent.com/u/48609645?s=400&u=e9254a7739e60ffc028a5b18bb2262b078eb658a&v=4">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Hola</h1>
                     <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
@@ -193,7 +193,7 @@
                 <div class="main-content-wrapper">
                     <center>
                         <p class="footer-paragraph">
-                            <strong data-new-link="true">© James Vásquez - 2020</strong>
+                            <strong data-new-link="true">© James Vásquez - 2022</strong>
                         </p>
                     </center>
                 </div>
