--- a/marruecosisuenergiasolar.html
+++ b/marruecosisuenergiasolar.html
@@ -82,7 +82,7 @@
         <a class="open-image-section-block w-hidden-small w-hidden-tiny w-inline-block" data-ix="hide-arrow-button" href="#">
             <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="img/flechade.png">
         </a>
-            <div class="blog-post-header left-section" style="background-image: url('https://instagram.ftru2-2.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/p640x640/72198997_913500765713691_4599598368756918050_n.jpg?_nc_ht=instagram.ftru2-2.fna.fbcdn.net&_nc_cat=103&_nc_ohc=tTbQaM9dVY8AX_u3OLX&oh=883c7ba71f6ba8b0f11c6e73852b335c&oe=5E9005C6');">
+            <div class="blog-post-header left-section" style="background-image: url('https://images.pexels.com/photos/6729421/pexels-photo-6729421.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
                 <div class="close-button-wrapper w-hidden-small w-hidden-tiny">
                     <a class="left-section-close-button w-inline-block" data-ix="close-left-section" href="#">
                         <div class="close-block-title" data-ix="hide-close-title">Modo lectura</div>
@@ -94,8 +94,8 @@
                         <h2 class="blog-post-header-title w-hidden-small w-hidden-tiny" data-ix="fade-in-on-load-2">Marruecos y su energía solar</h2>
                         <div class="blog-post-page-author-wrapper w-clearfix" data-ix="fade-in-on-load-2">
                             <div class="blog-post-author-block" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
-                            <div class="blog-post-page-author-title">James Gómez</div>
-                            <div class="large-blog-post-date">Agos 16, 2019</div>
+                            <div class="blog-post-page-author-title">James Vásquez</div>
+                            <div class="large-blog-post-date">Agos 16, 2021</div>
                         </div>
                     </div>
                 </div>
@@ -115,6 +115,13 @@
                             <blockquote><a target="_blak" href="https://www.dw.com/">Fuente</a></blockquote>
                         </div>
 
+                        <div class="texto">La energía solar en Marruecos está transformando el escenario de las energías renovables. Una de las plantas de energía solar más grandes del mundo está situada en Marruecos
+                            <hr>
+                            Cuando Jaouad Ait Rebah atraviesa los montes del Alto Atlas, trae luz propia a sus habitantes. Este empresario marroquí instala paneles solares en los pueblos pintorescos del macizo. Para los lugareños supone una notable mejora de la calidad de vida.
+                            Porque los pueblos solo son pintorescos para quien los visita. Aquí vive gente pobre y los jóvenes han partido en busca de trabajo. Pero los colectores solares traen nuevos tiempos a los pueblos.
+                            Con su trabajo, Jaouad Ait Rebah es un mascarón de proa del sorprendente cambio energético que Marruecos realiza ya desde años. En este aspecto el país norteafricano es líder en el continente, algo que se aprecia en Ouarzazate, la ciudad natal de Jaouad.
+                            Aquí se yergue una de las mayores plantas solares del mundo, con cerca de un millón de espejos parabólicos. El rey Mohammed VI ha autorizado una inversión de cerca de 9 mil millones de dólares para estas instalaciones, que abastecen de electricidad a  dos millones de personas. El objetivo es que de aquí al 2040 casi la mitad de la electricidad marroquí proceda de energías renovables. El equipo de filmación acompaña al operario Jaouad en su trabajo, admira las grandes instalaciones e indaga en qué medida los ambiciosos proyectos del rey Mohammed VI alcanzan a la gente de a pie.</div>
+
                         <div class="read-more-posts-title-wrapper">
                             <h4 class="more-posts-title">¿Ya viste esto?</h4>
                             <h4 class="_2 more-posts-title">Descubre más publicaciones sobre</h4>
@@ -124,7 +131,7 @@
                             <div class="w-clearfix w-dyn-items w-row">
                                 <div class="small-blog-post w-col w-col-6 w-dyn-item">
                                     <div class="small-blog-post-image-wrapper">
-                                        <a class="blog-post-image-link-block small w-inline-block" href="/blog/i-will-be-traveling-to-nepal-for-the-second-time-this-year" style="background-image: url('https://daks2k3a4ib2z.cloudfront.net/56c57a495f4a7cf431e728ce/56c57a495f4a7cf431e728e3_Photo-2.jpg');">
+                                        <a class="blog-post-image-link-block small w-inline-block" href="/blog/i-will-be-traveling-to-nepal-for-the-second-time-this-year" style="background-image: url('https://images.pexels.com/photos/9893729/pexels-photo-9893729.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');">
                                             <div class="blog-post-image-overlay"></div>
                                         </a>
                                         <a class="blog-tag-button in-small-blog-post w-button" href="/categories/travel" style="background-color: #52df59;">Ingeniería</a>
@@ -135,7 +142,7 @@
                                 </div>
                                 <div class="small-blog-post w-col w-col-6 w-dyn-item">
                                     <div class="small-blog-post-image-wrapper">
-                                        <a class="blog-post-image-link-block small w-inline-block" href="/blog/why-i-keep-coming-back-at-this-seemingly-simple-location" style="background-image: url('https://daks2k3a4ib2z.cloudfront.net/56c57a495f4a7cf431e728ce/56c57a495f4a7cf431e728f6_Photo-15.jpg');">
+                                        <a class="blog-post-image-link-block small w-inline-block" href="/blog/why-i-keep-coming-back-at-this-seemingly-simple-location" style="background-image: url('hhttps://images.pexels.com/photos/9893729/pexels-photo-9893729.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');">
                                             <div class="blog-post-image-overlay"></div>
                                         </a>
                                         <a class="blog-tag-button in-small-blog-post w-button" href="/categories/travel" style="background-color: #52df59;">Ingeniería</a>
