--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@
                         <div class="blog-posts-list w-clearfix w-dyn-items w-row">
 
                             <div class="blog-card-post w-col w-col-6 w-dyn-item">
+                                <a class="blog-post-image-link-block card w-inline-block" href="chipsapple.html" style="background-image: url('https://image.freepik.com/foto-gratis/lista-tareas-cafe-plano_23-2148475401.jpg');">
+                                    <div class="blog-post-image-overlay">
+                                        <div class="blog-card-title-wrapper">
+                                            <div class="blog-card-title">M1 Pro y M1 Max: los chips más potentes creados por Apple</div>
+                                        </div>
+                                        <div class="blog-post-author-wrapper card w-clearfix">
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
+                                            <div class="blog-post-author-title small">James</div>
+                                            <div class="blog-post-date small">Oct 20, 2021</div>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a class="blog-tag-button card w-button" href="tecnologia.html" style="background-color: #a642f8;">Tecnología</a>
+                            </div>
+
+                            <div class="blog-card-post w-col w-col-6 w-dyn-item">
                                 <a class="blog-post-image-link-block card w-inline-block" href="marruecosisuenergiasolar.html" style="background-image: url('https://image.freepik.com/foto-gratis/render-3d-robot-que-sostiene-panel-solar-glboe-cubierta-hierba_1048-10930.jpg');">
                                     <div class="blog-post-image-overlay">
                                         <div class="blog-card-title-wrapper">
