--- a/chipsapple.html
+++ b/chipsapple.html
@@ -21,7 +21,7 @@
         <meta name="twitter:description" content="Los nuevos chips integrados en la nueva MacBook Pro vienen con un CPU de hasta 10 núcleos, un GPU de 32 núcleos, 64 GB de memoria unificada, aceleración ProRes y una eficiencia energética líder en la industria."/>
         <meta name="twitter:card" content="photo"/>
         <meta name="twitter:site" content="@jamesvasquezg"/>
-        <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe/toyotaciudadfuturo.html" />
+        <meta name="twitter:url" content="https://jamesvasquezg.github.io/pe/chipsapple.html" />
         <meta name="twitter:image" content="https://jamesvasquezg.github.io/pe/img/chipsapple.png"/>
         <!--###################-->
             
@@ -30,7 +30,7 @@
         <meta property="og:description" content="Los nuevos chips integrados en la nueva MacBook Pro vienen con un CPU de hasta 10 núcleos, un GPU de 32 núcleos, 64 GB de memoria unificada, aceleración ProRes y una eficiencia energética líder en la industria"/>
         <meta property="og:type" content="Article" />
         <meta property="og:site_name" content="Marruecos y su energía solar"/>
-        <meta property="og:url" content="https://jamesvasquezg.github.io/pe/toyotaciudadfuturo.html" />
+        <meta property="og:url" content="https://jamesvasquezg.github.io/pe/chipsapple.html" />
         <meta property="og:image" content="https://jamesvasquezg.github.io/pe/img/chipsapple.png"/>
         
         <!--Javascript, fuentes y CSS Estilos-->
