--- a/chipsapple.html
+++ b/chipsapple.html
@@ -82,7 +82,7 @@
         <a class="open-image-section-block w-hidden-small w-hidden-tiny w-inline-block" data-ix="hide-arrow-button" href="#">
             <img class="icon-arrow-right" sizes="(max-width: 767px) 100vw, 20px" src="img/flechade.png">
         </a>
-            <div class="blog-post-header left-section" style="background-image: url('https://image.freepik.com/foto-gratis/lista-tareas-cafe-plano_23-2148475401.jpg');">
+            <div class="blog-post-header left-section" style="background-image: url('https://images.pexels.com/photos/4048766/pexels-photo-4048766.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
                 <div class="close-button-wrapper w-hidden-small w-hidden-tiny">
                     <a class="left-section-close-button w-inline-block" data-ix="close-left-section" href="#">
                         <div class="close-block-title" data-ix="hide-close-title">Modo lectura</div>
