--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="title" content="James Vásquez" >
         <meta name="description" content="Encuentra los mejores post sobre ingeniería, computación y tecnología."/>
         <meta name="disribution" content="global"/>
-        <meta name="copyright" content="Copyright 2021 by James Vásquez " />
+        <meta name="copyright" content="Copyright 2022 by James Vásquez" />
         <meta name="theme-color" content="#005371"/>
         <!--###########################-->
 
@@ -35,8 +35,8 @@
 
         <!--Javascript, fuentes y CSS Estilos-->
         <link href="css/stylos.css" rel="stylesheet" type="text/css">
-        <link href="https://jamesvasquezg.github.io/pe/img/isotipo.png" rel="shortcut icon" type="image/x-icon">
-        <link href="https://jamesvasquezg.github.io/pe/img/isotipo.png" rel="apple-touch-icon">
+        <link href="https://jamesvasquezg.github.io/pe/img/favicon.png" rel="shortcut icon" type="image/x-icon">
+        <link href="https://jamesvasquezg.github.io/pe/img/favicon.png" rel="apple-touch-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
         <script type="text/javascript">WebFont.load({
             google: {
@@ -69,7 +69,7 @@
             <nav class="nav-menu w-nav-menu" role="navigation">
                 <div class="nav-about-me-block">
                     <div class="nav-image-header">
-                        <img class="nav-profile-image" sizes="100vw" src="https://avatars.githubusercontent.com/u/48609645?s=400&u=e9254a7739e60ffc028a5b18bb2262b078eb658a&v=4">
+                        <img class="nav-profile-image" sizes="100vw" src="https://jamesvasquezg.github.io/pe/img/favicon.png">
                     </div>
                     <div class="nav-about-content-block">
                         <div class="nav-about-me-title">James Vásquez</div>
@@ -80,7 +80,7 @@
                 <a class="nav-link w-nav-link" href="james.html">Inicio</a>
                 <a class="nav-link w-nav-link" href="categorias.html">Categorías</a>
                 <a class="nav-link w-nav-link" href="publicaciones.html">Publicaciones</a>
-                <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcvodl_o8IE73tZCQ_NiTWA?view_as=subscriber">Videos</a>
+                <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Videos</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
             </nav>
@@ -101,7 +101,7 @@
             </div>
             <div class="left-section-overlay">
                 <div class="centered left-section-content-wrapper">
-                    <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://avatars.githubusercontent.com/u/48609645?s=400&u=e9254a7739e60ffc028a5b18bb2262b078eb658a&v=4">
+                    <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/favicon.png">
                     <h1 class="left-section-title" data-ix="fade-in-on-load-1">Hola</h1>
                     <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
@@ -120,15 +120,15 @@
                         <div class="blog-posts-list w-clearfix w-dyn-items w-row">
 
                             <div class="blog-card-post w-col w-col-6 w-dyn-item">
-                                <a class="blog-post-image-link-block card w-inline-block" href="chipsapple.html" style="background-image: url('https://image.freepik.com/foto-gratis/lista-tareas-cafe-plano_23-2148475401.jpg');">
+                                <a class="blog-post-image-link-block card w-inline-block" href="chipsapple.html" style="background-image: url('https://images.pexels.com/photos/4048766/pexels-photo-4048766.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
                                     <div class="blog-post-image-overlay">
                                         <div class="blog-card-title-wrapper">
                                             <div class="blog-card-title">M1 Pro y M1 Max: los chips más potentes creados por Apple</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
-                                            <div class="blog-post-date small">Oct 20, 2021</div>
+                                            <div class="blog-post-date small">Nov 09, 2021</div>
                                         </div>
                                     </div>
                                 </a>
@@ -142,9 +142,9 @@
                                             <div class="blog-card-title">Marruecos y su energía solar</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
-                                            <div class="blog-post-date small">Set 20, 2019</div>
+                                            <div class="blog-post-date small">Nov 9, 2021</div>
                                         </div>
                                     </div>
                                 </a>
@@ -158,7 +158,7 @@
                                             <div class="blog-card-title">Drones y la agricultura del futuro.</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Set 13, 2019</div>
                                         </div>
@@ -174,7 +174,7 @@
                                             <div class="blog-card-title">Bioluminiscencia árboles que producen luz</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Set 06, 2019</div>
                                         </div>
@@ -190,7 +190,7 @@
                                             <div class="blog-card-title">¿Están nuestros archivos seguros en la nube?</div>
                                         </div>
                                         <div class="blog-post-author-wrapper card w-clearfix">
-                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/isotipo.png');"></div>
+                                            <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
                                             <div class="blog-post-date small">Ags 30, 2019</div>
                                         </div>
