--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                 window.dataLayer = window.dataLayer || [];
                 function gtag(){dataLayer.push(arguments);}
                 gtag('js', new Date());
-
                 gtag('config', 'UA-142474303-2');
             </script>
         <!--####################################-->
@@ -77,12 +76,13 @@
                         <div class="nav-location-title">Perú</div>
                     </div>
                 </div>
-                <a class="nav-link w-nav-link" href="james.html">Inicio</a>
+                <a class="nav-link w-nav-link" href="index.html">Inicio</a>
                 <a class="nav-link w-nav-link" href="categorias.html">Categorías</a>
                 <a class="nav-link w-nav-link" href="publicaciones.html">Publicaciones</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.youtube.com/channel/UCcapGxLYM03iOaL4Te0r9cg">Videos</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://www.facebook.com/jamesvasquezg/">Facebook</a>
                 <a class="nav-link w-nav-link" target="_blank" href="https://twitter.com/jamesvasquezg">Twitter</a>
+                <a class="nav-link w-nav-link" href="info.html">Información</a>
             </nav>
             <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
@@ -102,7 +102,7 @@
             <div class="left-section-overlay">
                 <div class="centered left-section-content-wrapper">
                     <img class="section-profile-image" data-ix="fade-in-on-load-0" sizes="(max-width: 767px) 80px, 110px" src="https://jamesvasquezg.github.io/pe/img/favicon.png">
-                    <h1 class="left-section-title" data-ix="fade-in-on-load-1">Hola</h1>
+                    <h1 class="left-section-title" data-ix="fade-in-on-load-1">Bienvenido</h1>
                     <h2 class="_2 dark-theme left-section-title" data-ix="fade-in-on-load-2">Encuentra los mejores post sobre ingeniería, computación y tecnología.</h2>
                     <div class="social-wrapper" data-ix="fade-in-on-load-3">
                         <a class="color left-section-social-button w-button" target="_blak" href="https://www.facebook.com/jamesvasquezg">Facebook</a>
@@ -192,7 +192,7 @@
                                         <div class="blog-post-author-wrapper card w-clearfix">
                                             <div class="blog-post-author-image small" style="background-image: url('https://jamesvasquezg.github.io/pe/img/favicon.png');"></div>
                                             <div class="blog-post-author-title small">James</div>
-                                            <div class="blog-post-date small">Ags 30, 2019</div>
+                                            <div class="blog-post-date small">Ags 30, 2021</div>
                                         </div>
                                     </div>
                                 </a>
